--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h3>微生物の検出分類 - ネコ用UI/UXライブラリ</h3>
-					<p>ツメや肉球でも操作できる、ネコのためのTouchインターフェースライブラリです。かつお節やマタタビなど、ネコ用アイコンも多数装備。マウスでは気が散ってしまうネコの労働生産性を向上させます。</p>
+					<p>近年微生物活用が検討されています。顕微鏡を用いた手作業による微生物探索が活用のボトルネックになっています。そこで検出をYOLOにより実装し、分類をCNNによって開発中です。</p>
 				</div>
 				<div class="col-sm-6">
 					<img src="neko_files/work1.png" class="img-responsive">
@@ -112,8 +112,8 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-6">
-					<h3>果物の等級判定 - 金融向け開発フレームワーク</h3>
-					<p>近年注目を集めるFintechサービスのためのシステム開発フレームワークです。高度なセキュリティ機能とブロックチェーン技術を実装し、多数の使いやすいAPIにより、超高速で金融向けサービスの開発を可能にします。</p>
+					<h3>果物の等級判定 - 農家向け自動選果機</h3>
+					<p>果物の選果作業には多大な労力がかかり、農業従事者を悩ませてきました。近年注目を集めるFintechサービスのためのシステム開発フレームワークです。高度なセキュリティ機能とブロックチェーン技術を実装し、多数の使いやすいAPIにより、超高速で金融向けサービスの開発を可能にします。</p>
 				</div>
 				<div class="col-sm-6">
 					<img src="neko_files/work2.png" class="img-responsive">
@@ -131,6 +131,15 @@
       <div class="row">
 				<div class="col-sm-6">
 					<h3>AI目覚まし - ユニットサイト - 作成中</h3>
+					<p>ついつい夜更かししちゃう人のためのソーシャルコミュニケーションサービスです。自由とは、無料のネコ飯を食べることではなく、だれにも束縛されない、移動・食事・睡眠を意味しています。</p>
+				</div>
+				<div class="col-sm-6">
+					<img src="neko_files/work3.png" class="img-responsive">
+				</div>
+			</div>
+      <div class="row">
+				<div class="col-sm-6">
+					<h3>ジェスチャ入力システム - 工場向けシステム - 作成中</h3>
 					<p>ついつい夜更かししちゃう人のためのソーシャルコミュニケーションサービスです。自由とは、無料のネコ飯を食べることではなく、だれにも束縛されない、移動・食事・睡眠を意味しています。</p>
 				</div>
 				<div class="col-sm-6">
