--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<p class="lead">エンジニアのポートフォリオ公開中。</p>
 				</div>
 				<div class="col-sm-6">
-					<img src="computer_programming_man.png" class="img-responsive">
+					<img src="camera_bouen_lens.png" class="img-responsive">
 				</div>
 			</div>
 		</div>
